Fixed overflow issue on mobile view

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -186,6 +186,15 @@ a {
   bottom: -2px;
 }
 
+#section-1,
+#section-2,
+#section-3,
+#section-4,
+#section-5,
+#section-6 {
+  overflow-x: hidden;
+}
+
 #section-1 {
   padding: 82px 0;
 
